css/rtt.css
#jqt.fullscreen #home .info 
{
    display: none;
}

div#jqt #about 
{
    padding: 100px 10px 40px;
    text-shadow: rgba(0, 0, 0, 0.3) 0px -1px 0;
    color: #999;
    font-size: 13px;
    text-align: center;
    background: #161618;
}

div#jqt #about p 
{
    margin-bottom: 8px;
}

div#jqt #about a 
{
    color: #fff;
    font-weight: bold;
    text-decoration: none;
}

/*#ticketList > div {
    background: -webkit-gradient(linear,0% 0%,0% 100%,from(#dadadc),to(#b4b3b8));
    border-bottom: 1px solid #9a9fa5;
    border-top: 1px solid #dbdbdd;
    text-shadow: rgba(255,255,255,.5) 0 1px 0;
    position: relative;
    height: 50px;

}

.ticketEntry{
    cursor: pointer;
}

.ticketId{
    float:left;
    width: 100px;
    overflow: hidden;
    margin: 0px auto;
}

.ticketCharacterName{
    display: block;
    width: 120px;
    overflow: hidden;
    margin: 0px auto;
}

.ticketCharacterState{
    display: block;
    width: 100px;
    margin: 0px auto;
    overflow: hidden:
}

.ticketText{
    width: 200px;
    overflow: hidden;
    display: block;
    margin: 0px auto;
    text-overflow: ellipsis;
}

.ticketDelete{
    width: 100px;
    background: url(img/delete.png);
    margin: 0px auto;
}*/

.ticketDelete {
    margin-left: 15px;
}

